correct imgs sizing on course-pages from new vocabulary styles spillover

--- a/src/style.css
+++ b/src/style.css
@@ -740,6 +740,14 @@ body main article.topic-summary.intro figure {
   display: none;
 }
 
+.course-embedded main .content p > img, .course-page main .content p > img, .course-index main .content p > img {
+    width: initial;
+}
+
+.course-embedded main .content figure > img, .course-page main .content figure > img, .course-index main .content figure > img {
+    width: initial;
+}
+
 .course-page details {
   margin-bottom: 2em;
 
